Revision history for {{$dist->name}}

{{$NEXT}}

0.05      2017-01-26 18:52:03 -0500
  - Use -fPIC (or equivalent) when building libbz2.a for share
    install so that it can be linked into a .so file for Perl

0.04      2017-01-18 15:36:03 -0500
  - Added %{bzip2} helper

0.03      2016-01-28 21:43:49 -0500
  - Use Alien::Base::ModuleBuild as configure requires
    instead of Alien::Base

0.02      2015-07-13 09:31:54 -0400
  - First cpan release!

0.01      2015-07-01 18:18:06 -0400
  - initial version