@@ -2,6 +2,7 @@ language: perl
 sudo: false
 
 install:
+  - ./maint/travis-install-alienbuild
   - perlbrew list
   - dzil authordeps --missing | cpanm -n
   - dzil listdeps --missing | cpanm -n
