@@ -6,23 +6,25 @@ copyright_year   = 2017
 version          = 0.05
 
 [@Author::Plicease]
-:version              = 2.10
+:version              = 2.11
 travis_status         = 1
 release_tests         = 1
-installer             = Alien
-alien_name            = bz2
-
-; see inc::My::ModuleBuild for actual command
-alien_build_command   = %{make} all PREFIX=%s
-alien_install_command = %{make} install PREFIX=%s
-
-alien_provides_libs   = -lbz2
-alien_repo            = http://www.bzip.org/1.0.6/
-alien_exact_filename  = bzip2-1.0.6.tar.gz
-alien_helper          = make = use Config; $Config{make}
-mb_class              = My::ModuleBuild
+installer             = Author::Plicease::MakeMaker
 github_user           = Perl5-Alien
 irc                   = irc://irc.perl.org/#native
+
+diag_preamble = | $post_diag = sub {
+diag_preamble = |   require Alien::Libbz2;
+diag_preamble = |   diag "version       = ", Alien::Libbz2->version;
+diag_preamble = |   diag "cflags        = ", Alien::Libbz2->cflags;
+diag_preamble = |   diag "cflags_static = ", Alien::Libbz2->cflags_static;
+diag_preamble = |   diag "libs          = ", Alien::Libbz2->libs;
+diag_preamble = |   diag "libs_static   = ", Alien::Libbz2->libs_static;
+diag_preamble = |   diag "bin_dir       = ", $_ for Alien::Libbz2->bin_dir;
+diag_preamble = |   diag "dist_dir      = ", Alien::Libbz2->dist_dir;
+diag_preamble = | };
+
+[AlienBuild]
 
 [RemovePrereqs]
 remove = strict
@@ -31,7 +33,6 @@ remove = base
 
 [Prereqs / ConfigurePrereqs]
 -phase = configure
-ExtUtils::CChecker = 0.10
 Alien::Base        = 0
 
 [Author::Plicease::Upload]
